Bug 177936 - choose zoom an change image break Percent-Zoom Pulldown
Summary: choose zoom an change image break Percent-Zoom Pulldown
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Canvas (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-16 22:34 UTC by Samuel Suther
Modified: 2017-08-07 08:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Suther 2008-12-16 22:34:15 UTC
Version:           0.10.0-beta6 (using 4.1.3 (KDE 4.1.3) "release 63.3", KDE:KDE4:Factory:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25.18-0.2-default

I open a Album Folder, and doubleklick on an Image to view it in Big-Size.

At the top of the Application i have a Pulldown-Menue with many Percent-Numbers for changing Zoom.

I change the Zoom of the Image to 50% (works)
If i change the Image (klick left into the thumbs), the New image would be open - BUT it open in 100%.

If i look into Zoom-Pulldown,,, the entry 50% is now 100% (it means... the value into the pulldown-Menue was overwritten.

Works with every other Percent-Number too... everytime the Images choosed in slidebar (left-side) the actual Percent would be overwritten... and so, there are many 100% entrys in the pulldown-menu, if you try this bug more than once...
Comment 1 caulier.gilles 2008-12-16 22:42:55 UTC
When you said "...and doubleklick on an Image to view it in Big-Size", are you open image in editor or just in embeded preview.

Also, i recommend to test 0.10.0-beta7 where a lots of bugs have been fixed (around 120!)

Gilles  Caulier
Comment 2 Samuel Suther 2008-12-16 23:22:55 UTC
I Mean open in digikam preview (not an external Editor)
Comment 3 caulier.gilles 2008-12-17 06:23:11 UTC
Samuel,

With Preview mode we have works a lots to fix several issues with 0.10.0-beta7.

Please checkout code and try again.

Gilles
Comment 4 Will Stephenson 2009-01-08 12:13:06 UTC
This is still present in beta8 in the editor.  I think the original reporter is calling the (builtin digikam) editor "digikam preview", because the embedded preview in the main window has no zoom combobox, just zoom in/out actions and he refers to a "slidebar" on the left.

To reproduce: 
* Click 'Edit' on an image in an album with more than one image
* Change the zoom combobox to eg 50%
* Select a different image, zoom resets to 100% (check the value in the toolbar).
* Expand the zoom combobox.  Although the base widget reads 100%, the selected value in the zoom dropdown is still 50%.

Comment 5 Marcel Wiesweg 2009-01-20 22:34:11 UTC
SVN commit 914329 by mwiesweg:

If only edit text is changed, unset any current index of the combo box,
so that current index does not differ from text.
Fixes remaing problem if 177936. I think there is another bug for keeping the
zoom rate constant, I doubt it is user-friendly to always reset to 100%.

BUG: 177936

 M  +1 -0      editorwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=914329