If only edit text is changed, unset any current index of the combo box, so that current index does not differ from text. Fixes remaing problem if 177936. I think there is another bug for keeping the zoom rate constant, I doubt it is user-friendly to always reset to 100%.

BUG: 177936

svn path=/trunk/extragear/graphics/digikam/; revision=914329